<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginTop="@dimen/big_margin">

        <ImageView
            android:id="@+id/ivFingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:contentDescription="@string/act_fingerprint_iv_logo"
            android:src="@drawable/ic_fingerprint" />

        <TextView
            android:id="@+id/tvSubtitleFingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivFingerprint"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center_horizontal"
            android:text="@string/act_fingerprint_subtitle"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_size_medium" />

        <Button
            android:id="@+id/btExitFingerprint"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvExplainFingerprint"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/act_fingerprint_bt_login" />

        <TextView
            android:id="@+id/tvExplainFingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/default_margin"
            android:text="@string/act_fingerprint_tv_explain"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_size_small" />

    </RelativeLayout>

</layout>