<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin">

        <ImageButton
            android:id="@+id/ibCloseConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_close_circle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:text="@string/configurations"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:gravity="center_horizontal"
                android:text="@string/configurations_subtitle" />

            <LinearLayout
                android:id="@+id/llSingleConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin">

                <include
                    android:id="@+id/lcSingleConfig"
                    layout="@layout/layout_call" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_weight="1"
                    android:text="Chamada individual"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivSingleConfig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:alpha="0"
                    android:contentDescription="@string/iv_check"
                    android:src="@drawable/ic_check" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/llDoubleConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin">

                <include
                    android:id="@+id/lcDoubleConfig"
                    layout="@layout/layout_call" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_weight="1"
                    android:text="Chamada dupla"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivDoubleConfig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:alpha="0"
                    android:contentDescription="@string/iv_check"
                    android:src="@drawable/ic_check" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/llAllConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin">

                <include
                    android:id="@+id/lcAllConfig"
                    layout="@layout/layout_call" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_weight="1"
                    android:text="Chamada completa"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivAllConfig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:alpha="0"
                    android:contentDescription="@string/iv_check"
                    android:src="@drawable/ic_check" />

            </LinearLayout>

            <Button
                android:id="@+id/btConfirmConfig"
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/confirm" />

        </LinearLayout>

    </RelativeLayout>

</layout>